HttpService ile API istekleri refactor edildi

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,7 @@
     "confidential-port": 0,
     "policy-enforcer": {
       "credentials": {}
-    }
+    },
+    "keycloak_client_uuid": "4308ac55-c913-4430-8023-10c7f7c7d2de"
   }
 }
