Authentication kontrolü eklendi

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,9 +11,9 @@
     "auth-server-url": "http://localhost:8080",
     "ssl-required": "none",
     "resource": "myclient",
-    "verify-token-audience": true,
+    "verify-token-audience": false,
     "credentials": {
-      "secret": "krJm0Pr2rVGJo0he2jHc6SN1CDNsDaFi"
+      "secret": "TODGEbWqiXiwCqS4ugCEkGd3ga9DosQY"
     },
     "use-resource-role-mappings": true,
     "confidential-port": 0,
